# aithinker_Ai-M6X_SDK

./: .gitattributes
bsp/board/bl616dk/: board.c  board.h
bsp/common/: CMakeLists.txt
bsp/common/lcd/: lcd_conf.h
bsp/common/lcd/mipi_dbi/: bl_mipi_dbi.c
bsp/common/lcd/mipi_dpi/: bl_mipi_dpi_pec.c
components/utils/: CMakeLists.txt
components/wireless/bluetooth/btblecontroller/: CMakeLists.txt
components/wireless/wifi6/: bl6macsw_commit.txt
docs/source/samples/peripherals/iso11898/: index.rst
drivers/lhal/: CMakeLists.txt
drivers/lhal/config/bl616/: bl616_memorymap.h  device_table.c
drivers/lhal/include/: bflb_core.h
examples/: Makefile
examples/lvgl/: lcd_conf_user.h
examples/wifi/mqtt/: CMakeLists.txt  lwipopts_user.h  main.c
examples/wifi/sta/wifi_http/: CMakeLists.txt
examples/wifi/sta/wifi_tcp/: CMakeLists.txt
examples/wifi/sta/wifi_udp/: CMakeLists.txt
